--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Scatterplot Graph</title>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-  </head>
-  <body>
-    <h1 id="title">Doping in Professional Bicycle Racing</h1>
-    <div id="container">
-      <svg id="scatterplot"></svg>
-      <div id="tooltip" data-year="" style="opacity: 0;"></div>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Scatterplot Graph</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" defer></script>
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <h1 id="title">Doping in Professional Bicycle Racing</h1>
+  <div id="container">
+    <svg id="scatterplot"></svg>
+    <div id="tooltip" data-year="" style="opacity: 0;"></div>
+  </div>
+</body>
 </html>
